added: sum_index func

--- a/probing-clifford.ipynb
+++ b/probing-clifford.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "4d56774b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "1c9b458f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "beb3831f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
     "    [1, omega**2,   omega    ]\n",
     "])\n",
     "\n",
-    "Sgd = arr([\n",
+    "Sdg = arr([\n",
     "    [1,     0,    0        ],\n",
     "    [0,     1,    0        ],\n",
     "    [0,     0,    omega    ]\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "3c70c4b1",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 33,
+   "id": "e8043084",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_index(i):\n",
+    "    return 2**(i+1)-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "facab8e9",
    "metadata": {},
    "outputs": [],
@@ -125,14 +136,14 @@
     "        A.append(\"H\")\n",
     "        A.append(\"S\")\n",
     "    else: \n",
-    "        for j in range(sum_index(i),sum_index(i)+2**i):\n",
+    "        for j in range(sum_index(i-1),sum_index(i)):\n",
     "            A.append(A[j]+\"H\")\n",
     "            A.append(A[j]+\"S\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 35,
    "id": "8b517924",
    "metadata": {},
    "outputs": [
@@ -651,7 +662,7 @@
        " 'SSSSSSSS']"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,108 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "15ee38b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2046"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum_index(11)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "4aaa448d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0.],\n",
-       "       [0., 0., 0.],\n",
-       "       [0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.zeros([3,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "a694c8b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tes = np.array([[1,0,0],[0,0,1],[0,1,0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "id": "81649efc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.00000000e+00+0.00000000e+00j, -1.35312052e-16+5.55111512e-17j,\n",
-       "        -1.28717208e-16+6.40987562e-17j],\n",
-       "       [-1.35312052e-16+5.55111512e-17j,  2.22044605e-16+3.88578059e-16j,\n",
-       "         1.00000000e+00-5.03894164e-16j],\n",
-       "       [-1.28717208e-16+6.40987562e-17j,  1.00000000e+00-5.03894164e-16j,\n",
-       "         1.11022302e-16+3.79990454e-16j]])"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A_matrix[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "303f9340",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(np.round(tes - A_matrix[2],decimals = 3)== 0).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 41,
    "id": "cc40909f",
    "metadata": {},
    "outputs": [],
@@ -783,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 42,
    "id": "12669af3",
    "metadata": {},
    "outputs": [],
@@ -809,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 43,
    "id": "886554ed",
    "metadata": {},
    "outputs": [
@@ -1043,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 44,
    "id": "d2985022",
    "metadata": {},
    "outputs": [],
@@ -1054,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 47,
    "id": "d2bc65df",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +974,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 48,
+   "id": "be7e460c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "216"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Clifford3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "ac13e289",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1015,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 50,
    "id": "7d6a4295",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1046,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 51,
    "id": "3a7e0c68",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1077,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 52,
    "id": "ea8c032c",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1108,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 53,
    "id": "5cf5315d",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1139,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 54,
    "id": "74fc5e78",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1170,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 55,
    "id": "6045cf2d",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1201,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 56,
    "id": "a5166d71",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1232,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 57,
    "id": "ca779f0a",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1263,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 58,
    "id": "68d875fc",
    "metadata": {},
    "outputs": [
@@ -1363,7 +1294,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 59,
    "id": "363225cd",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1325,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,24 +1427,56 @@
     "\n",
     "\\begin{align}\n",
     "\\theta_2 &= 2\\cos^{-1}(|u_{33}|)\\\\\n",
-    "\\theta_1 &= 2\\sin^{-1}(|u_{31}/s_2)\\\\\n",
-    "\\theta_3 &= 2\\cos^{-1}(|u_{23}/s_2)\\\\\n",
+    "\\theta_1 &= 2\\sin^{-1}(|u_{31}|/s_2)\\\\\n",
+    "\\theta_3 &= 2\\cos^{-1}(|u_{23}|/s_2)\\\\\n",
     "\\phi_4 &= \\arg(u_{33})\\\\\n",
     "\\phi_2 &= \\arg(u_{32}-\\phi_4+\\pi/2\\\\\n",
     "\\phi_1 &= \\arg(u_{31}-\\phi_2-\\phi_4+\\pi\\\\\n",
     "\\phi_5 &= \\arg(u_{23}+\\phi_2+\\pi/2\\\\\n",
     "\\phi_3 &= \\arg(c_1c_2c_3-u_{22}e^{-i\\phi_5})+\\phi_1-\\phi_5\\\\\n",
     "\\phi_6 &= \\arg(u_{13}+\\phi_2+\\phi_3-\\pi)\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "\n",
+    "Knowing the parameterization $\\theta_i$ and $\\phi_i$, an arbitrary unitary can be decomposed into \n",
+    "\n",
+    "\\begin{align}\n",
+    "U = U_d(\\phi_6, \\phi_5, \\phi_4)R_{\\phi_3}^{(01)}(\\theta_3)R_{\\phi_2}^{(12)}(\\theta_2)R_{\\phi_1}^{(01)}(\\theta_1)\n",
+    "\\end{align}\n",
+    "\n",
+    "where \n",
+    "\n",
+    "\\begin{align}\n",
+    "U_d(\\phi_i, \\phi_j, \\phi_k) &= \\begin{pmatrix}\n",
+    "e^{\\phi_i} & 0 & 0 \\\\\n",
+    "0 & e^{\\phi_j} & 0 \\\\\n",
+    "0 & 0 & e^{\\phi_k} \n",
+    "\\end{pmatrix}\\\\\n",
+    "R_{\\phi}^{(01)}(\\theta) &= \\begin{pmatrix}\n",
+    "e^{-\\phi} & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & 0 & 1 \\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "\\cos(\\theta/2) & -i\\sin(\\theta/2) & 0 \\\\\n",
+    "-i\\sin(\\theta/2) & \\cos(\\theta/2) & 0 \\\\\n",
+    "0 & 0 & 1\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & 0 & e^{\\phi} \\end{pmatrix}\\\\\n",
+    "R_{\\phi}^{(12)}(\\theta) &= \\begin{pmatrix}\n",
+    "e^{\\phi} & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & 0 & 1 \\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & \\cos(\\theta/2) & -i\\sin(\\theta/2) \\\\\n",
+    "0 & -i\\sin(\\theta/2) & \\cos(\\theta/2) \\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & 0 & e^{-\\phi} \\end{pmatrix}\n",
+    "\\end{align}\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5df3be23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
